--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <ul id="nav1">
+      <li><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="300px"/></a></li>
        <li><a href="http://www.hannahsturteckyphotography.com/" title="Home">Home</a></li>
        <li><a href="index2.html" title="Films">Films</a></li>
        <li><a href="https://www.instagram.com/hannahsturphoto/" title="Filmmakers">Filmmakers</a></li>
        <li><a href="oldindex.html" title="About">About</a></li>
        <li><a href="oldindex.html" title="Press">Press</a></li>
-       <li><a href="oldindex.html" title="Search">Search</a></li>
- </ul>
- </html>
+       <li><a href="index.html"><img src="./images/magnifying_glass_black.png" alt="Icon" width="300px"/></a></li>
+</ul>
+</html>
