--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
        <li><a href="https://www.instagram.com/hannahsturphoto/" title="Filmmakers">Filmmakers</a></li>
        <li><a href="oldindex.html" title="About">About</a></li>
        <li><a href="oldindex.html" title="Press">Press</a></li>
-       <li><a href="index.html"><img src="./images/magnifying_glass_black.png" alt="Icon" width="300px"/></a></li>
+       <li><a href="index.html"><img src="./images/magnifying_glass_black.png" alt="Icon" width="25px"/></a></li>
+</ul>
+<ul id="footer">
+      <li><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
+      <li><a href="https://vimeo.com/home"><img src="./images/vimeo_icon.png" alt="Vimeo" width="25px"/></a></li>
+      <li><a href="https://www.facebook.com/"><img src="./images/facebook_icon.png" alt="Facebook" width="25px"/></a></li>
+      <li><a href="https://twitter.com/"><img src="./images/twitter_icon.png" alt="Twitter" width="25px"/></a></li>
+      <li><a href="https://www.instagram.com/"><img src="./images/instagram_icon.png" alt="Instagram" width="25px"/></a></li>
 </ul>
 </html>
