--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
 <ul id="nav1">
       <li><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="300px"/></a></li>
        <li><a href="http://www.hannahsturteckyphotography.com/" title="Home">Home</a></li>
