Added all main fonts to css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet">
 </head>
 
 <ul id="nav1">
