--- a/index.html
+++ b/index.html
@@ -7,17 +7,29 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet">
 </head>
 
+<body>
 <ul id="nav1">
-      <li><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="500px"/></a></li>
+      <li id="nav2"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="500px"/></a></li>
        <li><a href="http://www.hannahsturteckyphotography.com/" title="Home">Home</a></li>
        <li><a href="index2.html" title="Films">Films</a></li>
        <li><a href="https://www.instagram.com/hannahsturphoto/" title="Filmmakers">Filmmakers</a></li>
        <li><a href="oldindex.html" title="About">About</a></li>
        <li><a href="oldindex.html" title="Press">Press</a></li>
-       <li><a href="index.html"><img src="./images/magnifying_glass.png" alt="Icon" width="25px"/></a></li>
+       <li><a href="index.html"><img src="./images/magnifying_glass.png" alt="Icon" width="50px"/></a></li>
 </ul>
 
-<p></p>
+<p>
+words words words
+</p>
+<p>
+words words words
+</p>
+<p>
+words words words
+</p>
+<p>
+words words words
+</p>
 
 
 <ul id="footer">
@@ -27,4 +39,5 @@
       <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="25px"/></a></li>
       <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram_icon.png" alt="Instagram" width="25px"/></a></li>
 </ul>
+</body>
 </html>
