--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div id="container">
 <ul id="nav1">
       <li id="nav2"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="500px"/></a></li>
        <li><a href="http://www.hannahsturteckyphotography.com/" title="Home">Home</a></li>
@@ -18,6 +19,7 @@
        <li><a href="index.html"><img src="./images/magnifying_glass.png" alt="Icon" width="50px"/></a></li>
 </ul>
 
+<div id="bodycontainer">
 <p>
 words words words
 </p>
@@ -30,14 +32,15 @@ words words words
 <p>
 words words words
 </p>
-
+</div> <!--Closing body container-->
 
 <ul id="footer">
-      <li><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
-      <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="25px"/></a></li>
-      <li><a href="https://www.facebook.com/"target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="25px"/></a></li>
-      <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="25px"/></a></li>
-      <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram_icon.png" alt="Instagram" width="25px"/></a></li>
+      <li style="float:left"><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
+      <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
+      <li><a href="https://www.facebook.com/"target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
+      <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
+      <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram_icon.png" alt="Instagram" width="35px"/></a></li>
 </ul>
+</div> <!--Closing entire container-->
 </body>
 </html>
