--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
 </ul>
 
 <div id="bodycontainer">
+<!--Daria's section-->
 <p>
-words words words
+
 </p>
+
+
+<!--Jon's section -->
 <p>
-words words words
+
 </p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
+
 </div> <!--Closing body container-->
 
 <ul id="footer">
