added border 0 and first poster

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!--Jon's section -->
 <p>
-
+<img src="images/posters/dark-knight.jpg" height ="350px" padding="10px" />
 </p>
 
 </div> <!--Closing body container-->
