--- a/films.html
+++ b/films.html
@@ -20,18 +20,15 @@
 </ul>
 
 <div id="bodycontainer">
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
+
+<ul id="navfilm">
+  <li>Filter By</li>
+  <li><a href="xx" title="A to Z">A to Z</a></li>
+  <li><a href="films.html" title="Films">Current</a></li>
+  <li><a href="xx" title="Year">Year</a></li>
+  <li><a href="xx" title="Director">Director</a></li>
+</ul>
+
 </div> <!--Closing body container-->
 
 <ul id="footer">
