Added a h1 style and a title for about page

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+    <title> About Method M Films </title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet">
 </head>
@@ -20,9 +21,9 @@
 </ul>
 
 <div id="bodycontainer">
-<p>
-words words words
-</p>
+<h1>
+About Method M Films
+</h1>
 <p>
 words words words
 </p>
