--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -21,16 +21,9 @@
 
 <div id="bodycontainer">
 <p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
+<h1>Concerned Student 1950</h1>
+<br></br>
+
 </p>
 </div> <!--Closing body container-->
 
