--- a/films.html
+++ b/films.html
@@ -29,6 +29,12 @@
   <li><a href="xx" title="Director">Director</a></li>
 </ul>
 
+<h1>CURRENT FILMS</h>
+
+<ul id="navposters">
+    <li><a href="./images/posters/dark-knight.jpg"></a></li>
+</ul>
+
 </div> <!--Closing body container-->
 
 <ul id="footer">
