--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -23,7 +23,7 @@
 <p>
 <h1>Concerned Student 1950</h1>
 <br></br>
-
+<a href="index.html"><img src="./images/posters/wake-of-ire.png" alt="Logo" width="500px"/></a>
 </p>
 </div> <!--Closing body container-->
 
