--- a/index.html
+++ b/index.html
@@ -27,9 +27,19 @@
 
 
 <!--Jon's section -->
+<h1>Current Films</h1>
+
 <p>
-<img src="images/posters/dark-knight.jpg" height ="350px" padding="10px" />
+  <a href="films.html">
+<img src="images/posters/dark-knight.jpg" width="49%" />
+  </a>
+  <a href="films.html">
+<img src="images/posters/silence-of-the-lambs.jpg" width="49%" />
+  </a>
 </p>
+
+<!-- http://www.w3schools.com/css/tryit.asp?filename=trycss_transparency
+-->
 
 </div> <!--Closing body container-->
 
