--- a/films.html
+++ b/films.html
@@ -32,7 +32,7 @@
 <h1>CURRENT FILMS</h>
 
 <ul id="navposters">
-    <li><a href="./images/posters/dark-knight.jpg"></a></li>
+    <li><a href="./images/posters/dark-knight.jpg" width="50px"/></a></li>
 </ul>
 
 </div> <!--Closing body container-->
