Updated header and footer

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -3,8 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet">
+    <title>TITLE</title>
+    <meta http-equiv="content-type"
+		content="text/html;charset=utf-8"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
 </head>
 
 <body>
@@ -32,7 +35,7 @@
 <ul id="footer">
       <li style="float:left"><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
       <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
-      <li><a href="https://www.facebook.com/"target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
+      <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
       <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
       <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram_icon.png" alt="Instagram" width="35px"/></a></li>
 </ul>
