--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 <!--Jon's section -->
 <h1>Current Films</h1>
+<div align="center">
 
 <p>
   <a href="films.html">
@@ -40,6 +41,7 @@
 <img src="images/posters/silence-of-the-lambs.jpg" width="49%" />
   </a>
 </p>
+</div>
 
 <!-- http://www.w3schools.com/css/tryit.asp?filename=trycss_transparency
 -->
