--- a/films.html
+++ b/films.html
@@ -35,7 +35,9 @@
 <h1>CURRENT FILMS</h>
 
 <ul id="navposters">
-    <li><a href="./images/posters/dark-knight.jpg" width="50px"/></a></li>
+  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/dark-knight.jpg" width="49%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/silence-of-the-lambs.jpg" width="49%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/force-awakens.jpeg" width="49%"/></a></li>
 </ul>
 
 </div> <!--Closing body container-->
