--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>TITLE</title>
+    <title>Method M Films</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
+
+    <link rel="icon"
+      type="image/png"
+      href="images/favicon.png">
+
 </head>
 
 <body>
@@ -30,6 +35,7 @@
 
 
 <!--Jon's section -->
+<br />
 <h1>Current Films</h1>
 <div align="center">
 
