added image to about page

--- a/about.html
+++ b/about.html
@@ -4,8 +4,10 @@
 
 <head>
     <title> About Method M Films </title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet">
+    <meta http-equiv="content-type"
+		content="text/html;charset=utf-8"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
 </head>
 
 <body>
@@ -24,9 +26,10 @@
 <h1>
 About Method M Films
 </h1>
-<p>
-words words words
+<p style= "">
+<img src= "./images/method_m_gold.png" alt="Logo" width="500px" alt="Method M Films Logo" width="300px" />
 </p>
+
 <p>
 words words words
 </p>
@@ -38,7 +41,7 @@ words words words
 <ul id="footer">
       <li style="float:left"><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
       <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
-      <li><a href="https://www.facebook.com/"target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
+      <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
       <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
       <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram_icon.png" alt="Instagram" width="35px"/></a></li>
 </ul>
