--- a/films.html
+++ b/films.html
@@ -35,9 +35,13 @@
 <h1>CURRENT FILMS</h>
 
 <ul id="navposters">
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/dark-knight.jpg" width="49%"/></a></li>
-  <li><a href="xx"><img src="./images/posters/silence-of-the-lambs.jpg" width="49%"/></a></li>
-  <li><a href="xx"><img src="./images/posters/force-awakens.jpeg" width="49%"/></a></li>
+  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/dark-knight.jpg" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/silence-of-the-lambs.jpg" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/force-awakens.jpeg" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/jaws.jpg" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/fight-club.jpg" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/titanic.jpg" width="100%"/></a></li>
+
 </ul>
 
 </div> <!--Closing body container-->
