added a summary of the Method M Films

--- a/about.html
+++ b/about.html
@@ -26,12 +26,12 @@
 <h1>
 About Method M Films
 </h1>
-<p style= "">
-<img src= "./images/method_m_gold.png" alt="Logo" width="500px" alt="Method M Films Logo" width="300px" />
+<p style= "text-align: center">
+<img src= "./images/method_m_gold.png" alt="Logo" width="600px" alt="Method M Films Logo" width="600px" />
 </p>
 
 <p>
-words words words
+Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the Johnathan B. Murry Center for Documentary Journalism. They have taken part in the Missouri Method which is both how Method M got its name and how the Journalism school teaches its students. The Missouri Method is a style of learning though real-life journalism exposure. This is where the seniors of the Murry Center showcase their work.
 </p>
 <p>
 words words words
