--- a/Template.html
+++ b/Template.html
@@ -12,7 +12,7 @@
 
     <link rel="icon"
       type="image/png"
-      href="images/favicon.png">
+      href="images/favicon.png"/>
 </head>
 <!-- End 10/13 copy -->
 
