--- a/films.html
+++ b/films.html
@@ -3,11 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>TITLE</title>
+    <title>Films</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet"/>
+
+    <link rel="icon"
+      type="image/png"
+      href="images/favicon.png">
 </head>
 
 <body>
