--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
        <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="50px"/></a></li>
 </ul>
 
+<h1>Headline goes here</h1>
+
 <div id="bodycontainer">
 <!--Daria's section-->
-<p><a href="films.html"><img src="images/posters/wake-of-ire.jpg" alt="Main photo" width="109%" border="0"/></a></p>
 
-</p>
+<div class="image">
 
+<p><a href="films.html"><img src="images/posters/wake-of-ire.jpg" alt="Main photo" width="100%" border="0"/></a></p>
+
+<div id="movietitle">In the Wake of Ire<br /></div>
+
+</div>
+
+<p class="caption">Movie caption goes here<p>
 
 <!--Jon's section -->
 <h1>Current Films</h1>
