removed comment link

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
     <link rel="icon"
       type="image/png"
-      href="images/favicon.png">
-
+      href="images/favicon.png"/>
 </head>
 
 <body>
@@ -48,9 +47,6 @@
   </a>
 </p>
 </div>
-
-<!-- http://www.w3schools.com/css/tryit.asp?filename=trycss_transparency
--->
 
 </div> <!--Closing body container-->
 
