--- a/films.html
+++ b/films.html
@@ -11,7 +11,7 @@
 
     <link rel="icon"
       type="image/png"
-      href="images/favicon.png">
+      href="images/favicon.png"/>
 </head>
 
 <body>
@@ -36,15 +36,15 @@
   <li><a href="xx" title="Director">Director</a></li>
 </ul>
 
-<h1>CURRENT FILMS</h>
+<h1>CURRENT FILMS</h1>
 
 <ul id="navposters">
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/dark-knight.jpg" width="100%"/></a></li>
-  <li><a href="xx"><img src="./images/posters/silence-of-the-lambs.jpg" width="100%"/></a></li>
-  <li><a href="xx"><img src="./images/posters/force-awakens.jpeg" width="100%"/></a></li>
-  <li><a href="xx"><img src="./images/posters/jaws.jpg" width="100%"/></a></li>
-  <li><a href="xx"><img src="./images/posters/fight-club.jpg" width="100%"/></a></li>
-  <li><a href="xx"><img src="./images/posters/titanic.jpg" width="100%"/></a></li>
+  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/dark-knight.jpg" alt="Dark Knight" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/silence-of-the-lambs.jpg" alt="Silence of the Lambs" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/force-awakens.jpeg" alt="Force Awakens" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/jaws.jpg" alt="Jaws" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/fight-club.jpg" alt="Fight Club" width="100%"/></a></li>
+  <li><a href="xx"><img src="./images/posters/titanic.jpg" alt="Titanic" width="100%"/></a></li>
 
 </ul>
 
