--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p><a href="films.html"><img src="images/posters/wake-of-ire.jpg" alt="Main photo" width="100%" border="0"/></a></p>
 
-<div id="movietitle">In the Wake of Ire<br /></div>
+<h1 id="movietitle">In the Wake of Ire<br /></h1>
 
 </div>
 
