--- a/about.html
+++ b/about.html
@@ -31,11 +31,33 @@ About Method M Films
 </p>
 
 <p>
-Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the Johnathan B. Murry Center for Documentary Journalism. They have taken part in the Missouri Method which is both how Method M got its name and how the Journalism school teaches its students. The Missouri Method is a style of learning though real-life journalism exposure. This is where the seniors of the Murry Center showcase their work.
+Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a style= "color:black" href= "https://docjournalism.com/jonathan-b-murray-center/" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>. They have taken part in the Missouri Method which is both how Method M got its name and how the Journalism school teaches its students. The Missouri Method is a style of learning though real-life journalism exposure. This is where the seniors of the Murry Center showcase their work.
+</p>
+<h2>
+Staff
+</h2>
+<p>
+<img src= "./images/method_m_gold.png" alt="Logo" width="600px" alt="Method M Films Logo" width="600px" />
+</p>
+<p>
+<img src= "./images/method_m_gold.png" alt="Logo" width="600px" alt="Method M Films Logo" width="600px" />
+</p>
+<p>
+words
+</p>
+<p>
+words
+</p>
+<p>
+words
+</p>
+<p>
+words
 </p>
 <p>
 words words words
 </p>
+
 </div> <!--Closing body container-->
 
 <ul id="footer">
