--- a/about.html
+++ b/about.html
@@ -36,11 +36,11 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 <h2>
 Staff
 </h2>
-<p>
-<img src= "./images/method_m_gold.png" alt="Logo" width="600px" alt="Method M Films Logo" width="600px" />
+<p style= "text-align: center">
+<img src= "./images/stacey.jpg" alt="Stacey Woelfel" width="600px" alt="Stacey Woelfel Picture" width="600px" />
 </p>
-<p>
-<img src= "./images/method_m_gold.png" alt="Logo" width="600px" alt="Method M Films Logo" width="600px" />
+<p style= "text-align: center">
+<img src= "./images/robert.jpg" alt="Robert Greene" width="600px" alt="Robert Greene" width="600px" />
 </p>
 <p>
 words
