--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
 
 <p><a href="films.html"><img src="images/posters/wake-of-ire.jpg" alt="Main photo" width="100%" border="0"/></a></p>
 
-<h1 id="movietitle">In the Wake of Ire<br /></h1>
+<h2>In the Wake of Ire<br/></h2>
 
 </div>
 
-<p class="caption">Movie caption goes here<p>
-
 <!--Jon's section -->
-<br />
+<br/>
 <h1>Current Films</h1>
 <div align="center">
 
