--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
 <!--Daria's section-->
 
 <div class="image">
-
-<p><a href="films.html"><img src="images/posters/wake-of-ire.jpg" alt="Main photo" width="100%" border="0"/></a></p>
-
-<h2>In the Wake of Ire<br/></h2>
+<p><a href="films.html"><img src="images/posters/wake-of-ire-titled.png" alt="Main photo" width="100%" border="0"/></a></p>
 
 </div>
 
