--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div class="image">
 
-<p><a href="films.html"><img src="images/posters/wake-of-ire.jpg" alt="Main photo" width="100%" border="0"/></a></p>
+<p><a href="Concerned_Student_1950.html"><img src="images/posters/wake-of-ire.jpg" alt="Main photo" width="100%" border="0"/></a></p>
 
 <h2>In the Wake of Ire<br/></h2>
 
@@ -43,10 +43,10 @@
 <div align="center">
 
 <p>
-  <a href="films.html">
+  <a href="Concerned_Student_1950.html">
 <img src="images/posters/dark-knight.jpg" width="49%" />
   </a>
-  <a href="films.html">
+  <a href="Concerned_Student_1950.html">
 <img src="images/posters/silence-of-the-lambs.jpg" width="49%" />
   </a>
 </p>
