--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
 <p>
   <a href="Concerned_Student_1950.html">
-<img src="images/posters/dark-knight.jpg" width="49%" />
+<img src="images/posters/dark-knight.jpg" width="49%" alt="The Dark Knight" />
   </a>
   <a href="Concerned_Student_1950.html">
-<img src="images/posters/silence-of-the-lambs.jpg" width="49%" />
+<img src="images/posters/silence-of-the-lambs.jpg" width="49%" alt="Silence of the Lambs" />
   </a>
 </p>
 </div>
