Added discriptions and Mail to contact info

--- a/about.html
+++ b/about.html
@@ -34,29 +34,36 @@ About Method M Films
 Method M Films is powered by up and coming filmmakers from the University of Missouri- Columbia. Our filmmakers are part of the <a style= "color:black" href= "https://docjournalism.com/jonathan-b-murray-center/" title="Johnathan B. Murray Center for Documentary Journalism"> Johnathan B. Murry Center for Documentary Journalism site</a>. They have taken part in the Missouri Method which is both how Method M got its name and how the Journalism school teaches its students. The Missouri Method is a style of learning though real-life journalism exposure. This is where the seniors of the Murry Center showcase their work.
 </p>
 <h2>
-Staff
+Faculty
 </h2>
 <p style= "text-align: center">
 <img src= "./images/stacey.jpg" alt="Stacey Woelfel" width="600px" alt="Stacey Woelfel Picture" width="600px" />
 </p>
+    <h3>
+      Stacey Woelfel
+    </h3>
+    <p>
+       <a href="mailto: woelfels@missouri.edu">
+         woelfels@missouri.edu
+       </a>
+    </p>
+      <p>
+        Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.
+      </p>
+
 <p style= "text-align: center">
 <img src= "./images/robert.jpg" alt="Robert Greene" width="600px" alt="Robert Greene" width="600px" />
 </p>
-<p>
-words
-</p>
-<p>
-words
-</p>
-<p>
-words
-</p>
-<p>
-words
-</p>
-<p>
-words words words
-</p>
+    <h3>
+      Robert Greene
+    </h3>
+    <p>
+        <a href="mailto: greenera@missouri.edu"> greenera@missouri.edu
+        </a>
+    </p>
+        <p>
+          Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.
+        </p>
 
 </div> <!--Closing body container-->
 
