--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ Faculty
 <p style= "text-align: center">
 <img src= "./images/stacey.jpg" alt="Stacey Woelfel" width="600px" alt="Stacey Woelfel Picture" width="600px" />
 </p>
-    <h3>
+    <h3 style="text-align: center">
       Stacey Woelfel
     </h3>
     <p>
@@ -54,7 +54,7 @@ Faculty
 <p style= "text-align: center">
 <img src= "./images/robert.jpg" alt="Robert Greene" width="600px" alt="Robert Greene" width="600px" />
 </p>
-    <h3>
+    <h3 style="text-align: center">
       Robert Greene
     </h3>
     <p>
