trying to fix things
deleted second width on the image

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 Faculty
 </h2>
 <p style= "text-align: center">
-<img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="600px" alt="Stacey Woelfel Picture" width= "600px" />
+<img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="600px" alt="Stacey Woelfel Picture" />
 </p>
     <h3 style="text-align: center">
       Stacey Woelfel
@@ -52,7 +52,7 @@ Faculty
       </p>
 
 <p style= "text-align: center">
-<img src= "./images/robert.jpg" alt= "Robert Greene" width="600px" alt="Robert Greene" width= "600px" />
+<img src= "./images/robert.jpg" alt= "Robert Greene" width="600px" alt="Robert Greene" />
 </p>
     <h3 style="text-align: center">
       Robert Greene
