--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 About Method M Films
 </h1>
 <p style= "text-align: center">
-<img src= "./images/method_m_gold.png" alt="Logo" width="600px" alt= "Method M Films Logo" width= "600px" />
+<img src= "./images/method_m_gold.png" alt=" Method M Films Logo" width="600px"  />
 </p>
 
 <p>
@@ -37,7 +37,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 Faculty
 </h2>
 <p style= "text-align: center">
-<img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="600px" alt="Stacey Woelfel Picture" />
+<img src= "./images/stacey.jpg" alt= "Stacey Woelfel" width="600px" />
 </p>
     <h3 style="text-align: center">
       Stacey Woelfel
