--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--Daria's section-->
 
 <div class="image">
-<p><a href="films.html"><img src="images/posters/wake-of-ire-titled.png" alt="Main photo" width="100%" border="0"/></a></p>
+<p><a href="Concerned_Student_1950.html"><img src="images/posters/wake-of-ire-titled.png" alt="Main photo" width="100%" border="0"/></a></p>
 
 </div>
 
