--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@ Faculty
       </p>
 
 <p style= "text-align: center">
-<img src= "./images/robert.jpg" alt= "Robert Greene" width="600px" alt="Robert Greene" />
+<img src= "./images/robert.jpg" alt= "Robert Greene" width="600px" />
 </p>
     <h3 style="text-align: center">
       Robert Greene
