name order change
changed the order of the filmmakers names to match the photo

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -49,7 +49,7 @@
 <p style= "text-align: center">
   <img src= "./images/filmmakers_photo.jpg" alt="Filmmakers" width="600px" alt= "Concerned Student filmmakers" width= "25%" /></p>
 <h3 style="text-align: center">Filmmakers</h3>
-  <p style= "text-align: center">Adam Dietrich, Varun Bajaj and Kellan Hayley Marvin</p>
+  <p style= "text-align: center"> Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
 <h3 style="text-align: center">Directors</h3>
   <p style= "text-align: center">Adam Dietrich and Varun Bajaj</p>
 <h3 style="text-align: center">Producers</h3>
