Films page navigation

--- a/films_a_to_z.html
+++ b/films_a_to_z.html
@@ -2,8 +2,9 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
+<!-- 10/13 Copy for new Favicon and title text -->
 <head>
-    <title>Films</title>
+    <title>A to Z</title>
     <meta http-equiv="content-type"
 		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -13,6 +14,7 @@
       type="image/png"
       href="images/favicon.png"/>
 </head>
+<!-- End 10/13 copy -->
 
 <body>
   <div id="container">
@@ -27,7 +29,6 @@
 </ul>
 
 <div id="bodycontainer">
-
   <div class="dropdown">
     <button class="dropbtn">Filter By</button>
     <div class="dropdown-content">
@@ -37,15 +38,15 @@
     </div>
   </div>
 
-<h1>CURRENT FILMS</h1>
+<h1>A to Z</h1>
 
 <ul id="navposters">
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/force-awakens.jpeg" alt="Force Awakens" width="100%"/></a></li>
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/dark-knight.jpg" alt="Dark Knight" width="100%"/></a></li>
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/fight-club.jpg" alt="Fight Club" width="100%"/></a></li>
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/titanic.jpg" alt="Titanic" width="100%"/></a></li>
-  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/silence-of-the-lambs.jpg" alt="Silence of the Lambs" width="100%"/></a></li>
+  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/force-awakens.jpeg" alt="Force Awakens" width="100%"/></a></li>
   <li><a href="Concerned_Student_1950.html"><img src="./images/posters/jaws.jpg" alt="Jaws" width="100%"/></a></li>
+  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/silence-of-the-lambs.jpg" alt="Silence of the Lambs" width="100%"/></a></li>
+  <li><a href="Concerned_Student_1950.html"><img src="./images/posters/titanic.jpg" alt="Titanic" width="100%"/></a></li>
 
 </ul>
 
