Fixed nav bar on index. Removed image div tag

--- a/index.html
+++ b/index.html
@@ -17,22 +17,19 @@
 <body>
   <div id="container">
 <ul id="nav1">
-      <li id="nav2"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="500px"/></a></li>
+      <li id="nav2"><a href="index.html"><img src="images/method_m_gold.png" alt="Logo" width="500px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="50px"/></a></li>
+       <li><a href="search.html"><img src="images/magnifying_glass.png" alt="Icon" width="50px"/></a></li>
 </ul>
 
 <div id="bodycontainer">
 <!--Daria's section-->
 
-<div class="image">
 <p><a href="Concerned_Student_1950.html"><img src="images/posters/wake-of-ire-titled.png" alt="Main photo" width="100%" border="0"/></a></p>
-
-</div>
 
 <!--Jon's section -->
 <h1>Current Films</h1>
@@ -46,7 +43,7 @@
 <img src="images/posters/silence-of-the-lambs.jpg" width="49%" alt="Silence of the Lambs" />
   </a>
 </p>
-</div>
+</div> <!--Closing center div -->
 
 </div> <!--Closing body container-->
 
