added H3 to the style sheet.
H3 is pretty much identical to H2

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -40,7 +40,7 @@
 </ul>
 
 <p></p>
-
+<p>>
 <a name="summary"></a> <h2>Summary</h2>
 <br></br>(<a href="#top">Back To Top</a>)</p>
 <p style= "text-align: center">A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.</p>
@@ -48,15 +48,15 @@
 <a name="credits"></a> <h2>Credits</h2> (<a href="#top">Back To Top</a>)
 <p style= "text-align: center">
   <img src= "./images/filmmakers_photo.jpg" alt="Filmmakers" width="600px" alt= "Concerned Student filmmakers" width= "25%" /></p>
-<h3 style="text-align: center">Filmmakers</h3>
+<h3>Filmmakers</h3>
   <p style= "text-align: center"> Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
-<h3 style="text-align: center">Directors</h3>
+<h3>Directors</h3>
   <p style= "text-align: center">Adam Dietrich and Varun Bajaj</p>
-<h3 style="text-align: center">Producers</h3>
+<h3>Producers</h3>
   <p style= "text-align: center">Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
-<h3 style="text-align: center">Camera</h3>
+<h3>Camera</h3>
   <p style= "text-align: center">Adam Dietrich, Varun Bajaj and Kellan Hayley Marvin</p>
-<h3 style="text-align: center">Produced by</h3>
+<h3>Produced by</h3>
   <p style= "text-align: center">Robert Greene, Stacey Woelfel and the Jonathan B. Murray Center for Documentary Journalism</p>
 
 <a name="photos"></a> <h2>Photos</h2> (<a href="#top">Back To Top</a>)
