added style to center the Back to Top

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -40,12 +40,13 @@
 </ul>
 
 <p></p>
-<p>>
+
 <a name="summary"></a> <h2>Summary</h2>
-<br></br>(<a href="#top">Back To Top</a>)</p>
+<p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p style= "text-align: center">A series of racist acts prompts three Mizzou students to pick up cameras and take us inside the student movement that brought down their college president. From the hunger strike, to victory, to the fear of violent reprisals, we live with the students who started a campus revolt.</p>
 
-<a name="credits"></a> <h2>Credits</h2> (<a href="#top">Back To Top</a>)
+<a name="credits"></a> <h2>Credits</h2>
+<p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p style= "text-align: center">
   <img src= "./images/filmmakers_photo.jpg" alt="Filmmakers" width="600px" alt= "Concerned Student filmmakers" width= "25%" /></p>
 <h3>Filmmakers</h3>
@@ -59,7 +60,8 @@
 <h3>Produced by</h3>
   <p style= "text-align: center">Robert Greene, Stacey Woelfel and the Jonathan B. Murray Center for Documentary Journalism</p>
 
-<a name="photos"></a> <h2>Photos</h2> (<a href="#top">Back To Top</a>)
+<a name="photos"></a> <h2>Photos</h2>
+<p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p style= "text-align: center">
   <img src= "./images/concerned_still1.jpg" alt="concerned_still1" width="600px" alt= "Concerned Student still1" width= "25%" /></p>
 <p style= "text-align: center">
@@ -69,7 +71,8 @@
 <p style= "text-align: center">
   <img src= "./images/concerned_still4.jpg" alt="concerned_still4" width="600px" alt= "Concerned Student still4" width= "25%" /></p>
 
-<a name="press"></a> <h2>Press </h2> (<a href="#top">Back To Top</a>)
+<a name="press"></a> <h2>Press </h2>
+<p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <h3 style="text-align: center">Vox Magazine</h3>
   <p style= "text-align: center">
     Public response to the film's True/False Film Festival screening by <a style= "color:black" href= "http://www.voxmagazine.com/arts/movies/social-media-loved-concerned-student-film/article_d501fe4c-e3fe-11e5-8784-a769f84fe851.html" title="Vox Magazine"> Vox Magazine</a></p>
