Validated HTML and CSS

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -23,13 +23,10 @@
 </ul>
 
 <div id="bodycontainer">
-<p>
 <h1>Concerned Student 1950</h1>
-<br></br>
 <div class="videoWrapper">
-    <iframe width="1280" height="720" src="https://player.vimeo.com/video/159844403" frameborder="0" allowfullscreen></iframe>
+    <iframe width="1280" height="720" src="https://player.vimeo.com/video/159844403" frameborder="0"></iframe>
   </div>
-<br> </br>
 
 <ul id="movie_menu">
 <li><a name="top"></a></li>
@@ -48,7 +45,7 @@
 <a name="credits"></a> <h2>Credits</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p style= "text-align: center">
-  <img src= "./images/filmmakers_photo.jpg" alt="Filmmakers" width="600px" alt= "Concerned Student filmmakers" width= "25%" /></p>
+  <img src= "./images/filmmakers_photo.jpg" width="600px" alt= "Concerned Student filmmakers"/></p>
 <h3>Filmmakers</h3>
   <p style= "text-align: center"> Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
 <h3>Directors</h3>
@@ -63,25 +60,23 @@
 <a name="photos"></a> <h2>Photos</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <p style= "text-align: center">
-  <img src= "./images/concerned_still1.jpg" alt="concerned_still1" width="600px" alt= "Concerned Student still1" width= "25%" /></p>
+  <img src= "./images/concerned_still1.jpg" alt="concerned_still1" width="600px"/></p>
 <p style= "text-align: center">
-  <img src= "./images/concerned_still2.jpg" alt="concerned_still2" width="600px" alt= "Concerned Student still2" width= "25%" /></p>
+  <img src= "./images/concerned_still2.jpg" alt="concerned_still2" width="600px"/></p>
 <p style= "text-align: center">
-  <img src= "./images/concerned_still3.jpg" alt="concerned_still3" width="600px" alt= "Concerned Student still3" width= "25%" /></p>
+  <img src= "./images/concerned_still3.jpg" alt="concerned_still3" width="600px"/></p>
 <p style= "text-align: center">
-  <img src= "./images/concerned_still4.jpg" alt="concerned_still4" width="600px" alt= "Concerned Student still4" width= "25%" /></p>
+  <img src= "./images/concerned_still4.jpg" alt="concerned_still4" width="600px"/></p>
 
 <a name="press"></a> <h2>Press </h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <h3 style="text-align: center">Vox Magazine</h3>
   <p style= "text-align: center">
     Public response to the film's True/False Film Festival screening by <a style= "color:black" href= "http://www.voxmagazine.com/arts/movies/social-media-loved-concerned-student-film/article_d501fe4c-e3fe-11e5-8784-a769f84fe851.html" title="Vox Magazine"> Vox Magazine</a></p>
-<h3 style="text-align: center">Columbia Tribune</h3>
+<h3 style="text-align: center">Columbia Daily Tribune</h3>
   <p style= "text-align: center">
     Public response to the film's True/False Film Festival screening by the <a style= "color:black" href= "http://www.columbiatribune.com/news/local/true-false-film-documents-experience-of-university-of-missouri-student/article_da17c1d5-70d7-58ce-b0f0-bfc41cd31b46.html" title="Columbia Tribune"> Columbia Tribune</a></p>
 
-
-<br></br>
 </div> <!--Closing body container-->
 
 <ul id="footer">
