--- a/Template.html
+++ b/Template.html
@@ -44,7 +44,7 @@ words words words
 </div> <!--Closing body container-->
 
 <ul id="footer">
-      <li style="float:left"><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
+      <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
       <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
       <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
       <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
