--- a/Template.html
+++ b/Template.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!-- 10/13 Copy for new Favicon and title text -->
+
 <head>
     <title>Method M Films</title>
     <meta http-equiv="content-type"
@@ -27,22 +28,28 @@
        <li><a href="press.html" title="Press">Press</a></li>
        <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="43px"/></a></li>
 </ul>
-
 <div id="bodycontainer">
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-</div> <!--Closing body container-->
+  <!--COPY FROM HERE UP TO GET TEMPLATE NAV-->
 
+
+
+<p>
+words words words
+</p>
+<p>
+words words words
+</p>
+<p>
+words words words
+</p>
+<p>
+words words words
+</p>
+
+
+
+<!--COPY FROM HERE DOWN TO GET TEMPLATE FOOTER-->
+</div> <!--Closing body container-->
 <ul id="footer">
       <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
       <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
