Changed nav and footer on home page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
+<!-- 10/13 Copy for new Favicon and title text -->
+
 <head>
     <title>Method M Films</title>
     <meta http-equiv="content-type"
@@ -13,21 +15,20 @@
       type="image/png"
       href="images/favicon.png"/>
 </head>
+<!-- End 10/13 copy -->
 
 <body>
   <div id="container">
-<ul id="nav1">
-      <li id="nav2"><a href="index.html"><img src="images/method_m_gold.png" alt="Logo" width="500px"/></a></li>
+<ul id="nav1" class="navigation">
+      <li id="nav2" class="first"><a href="index.html"><img src="./images/_method_mobile.png" alt="Logo" width="43px"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html"><img src="images/magnifying_glass.png" alt="Icon" width="50px"/></a></li>
+       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" width="43px"/></a></li>
 </ul>
-
 <div id="bodycontainer">
-<!--Daria's section-->
 
 <p><a href="Concerned_Student_1950.html"><img src="images/posters/wake-of-ire-titled.png" alt="Main photo" width="100%" border="0"/></a></p>
 
@@ -47,12 +48,12 @@
 
 </div> <!--Closing body container-->
 
+</div> <!--Closing body container-->
 <ul id="footer">
-      <li style="float:left"><a href="mailto:journalism@missouri.edu" title="Contact">Contact</a></li>
+      <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
       <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
       <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
       <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
-      <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram_icon.png" alt="Instagram" width="35px"/></a></li>
 </ul>
 </div> <!--Closing entire container-->
 </body>
