--- a/press.html
+++ b/press.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
 <head>
+    <title>Method-M: Press Page</title>
+    <meta http-equiv="content-type"
+		content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300|Raleway" rel="stylesheet">
 </head>
