--- a/press.html
+++ b/press.html
@@ -27,6 +27,8 @@
 <p>
 <h2>Concerned Student 1950</h2>
 <h3>Year: 2016</h3>
+<h3>Director: Name</h3>
+<h3>Press Kit: PDF</h3>
 </p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra nisi erat, ut luctus libero scelerisque ut. Aenean consequat massa a velit pulvinar ultrices. Donec id volutpat sem. In hac habitasse platea dictumst. Integer blandit semper lacus non porttitor. Curabitur ullamcorper ligula ut tempor sodales. Phasellus quis pharetra lacus.</p>
 
