--- a/press.html
+++ b/press.html
@@ -25,11 +25,13 @@
 <h1>Press</h1>
 
 <p>
-<h2>Concerned Student 1950</h2>
+<h2><a href="url">Concerned Student 1950</a></h2>
 <h3>Year: 2016</h3>
 <h3>Director: Name</h3>
-<h3>Press Kit: PDF</h3>
+<h3>Press Kit:<a href="./press_kits/Press_kit_example.pdf">PDF</a></h3>
 </p>
+
+
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc viverra nisi erat, ut luctus libero scelerisque ut. Aenean consequat massa a velit pulvinar ultrices. Donec id volutpat sem. In hac habitasse platea dictumst. Integer blandit semper lacus non porttitor. Curabitur ullamcorper ligula ut tempor sodales. Phasellus quis pharetra lacus.</p>
 
 <p>Nunc auctor facilisis lobortis. Ut gravida, erat eu posuere aliquet, urna justo mollis justo, id consectetur enim nisi posuere sapien. Suspendisse magna sem, vestibulum ac mattis ac, ornare elementum diam. Phasellus quis leo eros. In viverra arcu eget augue malesuada dapibus. Ut euismod, nisl et gravida pellentesque, odio orci feugiat erat, sed tincidunt magna nulla a purus. Curabitur tempus venenatis neque. Nam in mi ac dolor dignissim hendrerit. In odio ipsum, auctor malesuada velit non, tempus venenatis augue. Aliquam vitae diam malesuada, suscipit purus ac, rhoncus tortor. Aliquam cursus ultricies odio et efficitur. Praesent accumsan elit sed tempor fringilla. Aliquam hendrerit sem vitae augue facilisis, eu lacinia dolor mollis. </p>
