--- a/search.html
+++ b/search.html
@@ -34,16 +34,7 @@
 
 
 <p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
-</p>
-<p>
-words words words
+<img src="images/searchpage.jpg" alt="Search Page"/>
 </p>
 
 
